kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: AllKnow-backend
  namespace: AllKnow
spec:
  type: ClusterIP
  selector:
    app: AllKnow-backend
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
